--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-requisitos-construccion/components/planes-programas-artc/planes-programas-artc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-requisitos-construccion/components/planes-programas-artc/planes-programas-artc.component.html
@@ -70,7 +70,7 @@
 </section>
 <div align="center" class="mt-3em" *ngIf="planesProgramas.observacionPlanesProgramasApoyo !== undefined">
   <mat-card class="border">
-    <mat-card-header class="header-card">
+    <mat-card-header class="header-card header-card--margin">
       <mat-card-title class="header-card--text grayTitle"> Verificación del apoyo a la supervisión </mat-card-title>
     </mat-card-header>
     <mat-card-content align="left">
@@ -219,7 +219,7 @@
 </div>
 <div style="margin-top: 3em" align="center" *ngIf="this.observacionesCompleted == true">
   <mat-card class="border">
-    <mat-card-header class="header-card">
+    <mat-card-header class="header-card header-card--margin">
       <mat-card-title class="header-card--text grayTitle"> Validación de la supervisión </mat-card-title>
     </mat-card-header>
     <mat-card-content align="left">
