--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-requisitos-construccion/components/hojas-vida-verificar-requisitos/hojas-vida-verificar-requisitos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-requisitos-construccion/components/hojas-vida-verificar-requisitos/hojas-vida-verificar-requisitos.component.html
@@ -130,7 +130,7 @@
 </div>
 <div align="center" *ngIf="perfil.observacionDevolucion">
   <mat-card class="border" style="margin-top: 20px">
-    <mat-card-header class="header-card">
+    <mat-card-header class="header-card header-card--margin">
       <mat-card-title class="header-card--text grayTitle"> Observaciones de la supervisión </mat-card-title>
     </mat-card-header>
     <mat-card-content align="left">
