--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-requisitos-construccion/components/diagnostico-verificar-requisitos/diagnostico-verificar-requisitos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-requisitos-construccion/components/diagnostico-verificar-requisitos/diagnostico-verificar-requisitos.component.html
@@ -11,7 +11,7 @@
 </div>
 <div align="left" *ngIf="construccion">
   <mat-card class="border">
-    <mat-card-header class="header-card">
+    <mat-card-header class="header-card header-card--margin">
       <mat-card-title class="header-card--text grayTitle"> Valor total de la fase 2 construcción </mat-card-title>
     </mat-card-header>
     <mat-card-content>
@@ -42,7 +42,7 @@
 
 <div align="left" *ngIf="this.observacionesCompleted == true">
   <mat-card class="border" style="margin-top: 20px">
-    <mat-card-header class="header-card">
+    <mat-card-header class="header-card header-card--margin">
       <mat-card-title class="header-card--text grayTitle"> Verificación del apoyo a la supervisión </mat-card-title>
     </mat-card-header>
     <mat-card-content>
@@ -98,7 +98,7 @@
     </div>
     <div class="flex-editor mt-2em animatedDown" *ngIf="addressForm.value.tieneObservaciones == true">
       <mat-card class="shipping-card w-80">
-        <mat-card-header class="header-card">
+        <mat-card-header class="header-card header-card--margin">
           <mat-card-title class="header-card--text"> Observaciones al diagnóstico </mat-card-title>
         </mat-card-header>
         <mat-card-content class="required-05">
@@ -152,7 +152,7 @@
 </div>
 <div align="center" *ngIf="construccion.observacionDevolucionDiagnostico">
   <mat-card class="border" style="margin-top: 20px">
-    <mat-card-header class="header-card">
+    <mat-card-header class="header-card header-card--margin">
       <mat-card-title class="header-card--text grayTitle"> Observaciones de la supervisión </mat-card-title>
     </mat-card-header>
     <mat-card-content align="left">
