--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-requisitos-construccion/components/programacion-obra-verificar-requisitos/programacion-obra-verificar-requisitos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-requisitos-construccion/components/programacion-obra-verificar-requisitos/programacion-obra-verificar-requisitos.component.html
@@ -107,7 +107,7 @@
 </div>
 <div align="center" *ngIf="this.observacionesCompleted === true">
   <mat-card class="border" style="margin-top: 20px">
-    <mat-card-header class="header-card">
+    <mat-card-header class="header-card header-card--margin">
       <mat-card-title class="header-card--text grayTitle"> Observaciones a la programación de obra </mat-card-title>
     </mat-card-header>
     <mat-card-content align="left">
@@ -127,7 +127,7 @@
 </div>
 <div align="center" *ngIf="contratoConstruccion.observacionDevolucionProgramacionObra">
   <mat-card class="border" style="margin-top: 20px">
-    <mat-card-header class="header-card">
+    <mat-card-header class="header-card header-card--margin">
       <mat-card-title class="header-card--text grayTitle"> Observaciones de la supervisión </mat-card-title>
     </mat-card-header>
     <mat-card-content align="left">
