Revert "Merge branch 'Fase-2-completo' of https://ivolucion.visualstudio.com/as%C3%AD%20vamos%20FFIE/_git/as%C3%AD%20vamos%20FFIE into Fase-2-completo"
This reverts commit 1cb3d3de4dbe5ee998c9a47c7fcbb0a82873a3d0, reversing
changes made to 1ed2cd463ea07166823f4287e3d38a862f76b1a0.

--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-requisitos-construccion/components/manejo-anticipo-verificar-requisitos/manejo-anticipo-verificar-requisitos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-requisitos-construccion/components/manejo-anticipo-verificar-requisitos/manejo-anticipo-verificar-requisitos.component.html
@@ -123,7 +123,7 @@
 </div>
 <div align="center" *ngIf="this.observacionesCompleted === true">
   <mat-card class="border" style="margin-top: 20px">
-    <mat-card-header class="header-card header-card--margin">
+    <mat-card-header class="header-card">
       <mat-card-title class="header-card--text grayTitle"> observaciones al manejo del anticipo </mat-card-title>
     </mat-card-header>
     <mat-card-content align="left">
@@ -141,7 +141,7 @@
 </div>
 <div align="center" *ngIf="contratacion.observacionDevolucionManejoAnticipo">
   <mat-card class="border" style="margin-top: 20px">
-    <mat-card-header class="header-card header-card--margin">
+    <mat-card-header class="header-card">
       <mat-card-title class="header-card--text grayTitle"> Observaciones de la supervisión </mat-card-title>
     </mat-card-header>
     <mat-card-content align="left">
