--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-requisitos-construccion/components/inversion-fljrecursos-verificar-requisitos/inversion-fljrecursos-verificar-requisitos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-requisitos-construccion/components/inversion-fljrecursos-verificar-requisitos/inversion-fljrecursos-verificar-requisitos.component.html
@@ -107,7 +107,7 @@
 </div>
 <div align="center" *ngIf="this.observacionesCompleted === true">
   <mat-card class="border" style="margin-top: 20px">
-    <mat-card-header class="header-card header-card--margin">
+    <mat-card-header class="header-card">
       <mat-card-title class="header-card--text grayTitle">
         Observaciones al flujo de inversión de recurso
       </mat-card-title>
@@ -129,7 +129,7 @@
 </div>
 <div align="center" *ngIf="contratoConstruccion.observacionDevolucionFlujoInversion">
   <mat-card class="border" style="margin-top: 20px">
-    <mat-card-header class="header-card header-card--margin">
+    <mat-card-header class="header-card">
       <mat-card-title class="header-card--text grayTitle"> Observaciones de la supervisión </mat-card-title>
     </mat-card-header>
     <mat-card-content align="left">
