--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/dialog-avance-acumulado/dialog-avance-acumulado.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/dialog-avance-acumulado/dialog-avance-acumulado.component.html
@@ -4,7 +4,7 @@
     </button>
     
     <h1 class="title-menu--h1">
-        Avance acumulado por capítulo {{ data.seguimientoSemanal.contratacionProyecto.proyecto.llaveMen }}
+        Avance acumulado por capítulo {{ data.seguimientoSemanal.contratacionProyecto?.proyecto.llaveMen }}
     </h1>
     
     <div class="d-flex justify-content-center mt-1em">
