--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/tabla-avance-fisico/tabla-avance-fisico.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/tabla-avance-fisico/tabla-avance-fisico.component.html
@@ -3,8 +3,8 @@
         <mat-card class="border">
             <mat-card-content class="mt-1em">
                 <section class="d-flex">
-                    <p class="ml-1em"><b>Programación acumulada de la obra</b>: {{ valuePendingProgramacionObra() }}%</p>
-                    <p class="ml-final-date"><b>Avance acumulado ejecutado de la obra</b>: {{ valuePendingAvanceEjecutado() }}%</p>
+                    <p class="ml-1em"><b>Programación acumulada de la obra</b>: {{ seguimientoSemanal.infoProyecto.programacionSemanal }}%</p>
+                    <p class="ml-final-date"><b>Avance acumulado ejecutado de la obra</b>: {{ seguimientoSemanal.infoProyecto.avanceFisicoSemanal }}%</p>
                 </section>
             </mat-card-content>
         </mat-card>
@@ -25,7 +25,7 @@
         </ng-container>
   
         <ng-container matColumnDef="periodoReporte">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header class="w-20"> Período del reporte </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 19%;"> Período del reporte </th>
           <td mat-cell *matCellDef="let element" align="center"> {{ element.periodoReporte }} </td>
         </ng-container>
   
@@ -77,7 +77,7 @@
 
         <ng-container matColumnDef="avanceFisicoSemana">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Avance físico de la semana </th>
-            <td mat-cell *matCellDef="let element" align="center"> {{ element.avanceFisicoSemana > 0 ? element.avanceFisicoSemana+'%' : '' }} </td>
+            <td mat-cell *matCellDef="let element" align="center"> {{ element.avanceFisicoSemana > 0 ? element.avanceFisicoSemana + '%' : '' }} </td>
         </ng-container>
     
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
