--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/avance-fisico-financiero/avance-fisico-financiero.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/avance-fisico-financiero/avance-fisico-financiero.component.html
@@ -48,6 +48,10 @@
 </section>
 
 <section class="text-center" *ngIf="esVerDetalle === true">
+    <div>
+        <p>Estado de la obra: <b> {{ seguimientoSemanal.infoProyecto.estadoObra }} </b> </p>
+    </div>
+
     <mat-accordion>
         <mat-expansion-panel class="expansion-style sub-expansion">
             <mat-expansion-panel-header class="expansion-style--header">
@@ -63,10 +67,6 @@
                             Disponibilidad de personal
                         </mat-panel-title>
                     </mat-expansion-panel-header>
-
-                    <div class="colorMainColor">
-                        <p> <b>Disponiblidad personal: Insuficiente</b> </p>
-                    </div>
         
                     <app-tabla-avance-resumen-alertas [seguimientoDiario]="seguimientoSemanal.seguimientoDiario"></app-tabla-avance-resumen-alertas>
                 </mat-expansion-panel>
@@ -77,12 +77,6 @@
                             Disponibilidad de material, equipo o productividad
                         </mat-panel-title>
                     </mat-expansion-panel-header>
-
-                    <div class="d-flex justify-content-center colorMainColor">
-                        <p><b>Disponiblidad de material</b>: Media</p>
-                        <p style="margin-left: 2em;"> <b>Disponiblidad del equipo</b>: Baja </p>
-                        <p style="margin-left: 2em;"><b>Productividad</b>: --- </p>
-                    </div>
 
                     <app-tabla-disponibilidad-material [seguimientoDiario]="seguimientoSemanal.seguimientoDiario"></app-tabla-disponibilidad-material>
                 </mat-expansion-panel>
