--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/tabla-avance-fisico/tabla-avance-fisico.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/tabla-avance-fisico/tabla-avance-fisico.component.html
@@ -3,8 +3,8 @@
         <mat-card class="border">
             <mat-card-content class="mt-1em">
                 <section class="d-flex">
-                    <p class="ml-1em"><b>Programación acumulada de la obra</b>: {{ seguimientoSemanal.infoProyecto.programacionSemanal }}%</p>
-                    <p class="ml-final-date"><b>Avance acumulado ejecutado de la obra</b>: {{ seguimientoSemanal.infoProyecto.avanceFisicoSemanal }}%</p>
+                    <p class="ml-1em"><b>Programación acumulada de la obra</b>: {{ seguimientoSemanal.infoProyecto.programacionSemanal !== undefined ? seguimientoSemanal.infoProyecto.programacionSemanal + '%' : '' }}</p>
+                    <p class="ml-final-date"><b>Avance acumulado ejecutado de la obra</b>: {{ seguimientoSemanal.infoProyecto.avanceFisicoSemanal !== undefined ? seguimientoSemanal.infoProyecto.avanceFisicoSemanal + '%' : '' }}</p>
                 </section>
             </mat-card-content>
         </mat-card>
@@ -77,7 +77,7 @@
 
         <ng-container matColumnDef="avanceFisicoSemana">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Avance físico de la semana </th>
-            <td mat-cell *matCellDef="let element" align="center"> {{ element.avanceFisicoSemana > 0 ? element.avanceFisicoSemana + '%' : '' }} </td>
+            <td mat-cell *matCellDef="let element" align="center"> {{ element.avanceFisicoSemana + '%' }} </td>
         </ng-container>
     
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -111,7 +111,7 @@
   
         <ng-container matColumnDef="programacionSemana">
           <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Programación de la semana </th>
-          <td mat-cell *matCellDef="let element" align="center" class="color-text"> {{ element.programacionSemana }} </td>
+          <td mat-cell *matCellDef="let element" align="center" class="color-text"> {{ element.programacionSemana }}% </td>
         </ng-container>
   
         <ng-container matColumnDef="capitulo">
@@ -143,7 +143,7 @@
 
         <ng-container matColumnDef="avanceFisicoSemana">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Avance físico de la semana </th>
-            <td mat-cell *matCellDef="let element" align="center" class="color-text"> {{ element.avanceFisicoSemana > 0 ? element.avanceFisicoSemana+'%' : '' }} </td>
+            <td mat-cell *matCellDef="let element" align="center" class="color-text"> {{ element.avanceFisicoSemana + '%' }} </td>
         </ng-container>
     
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
