--- a/asivamosffie.web/asivamosffie/src/app/_pages/sesion-comite-fiduciario/components/tabla-validacion-solicitudes-contractuales/tabla-validacion-solicitudes-contractuales.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/sesion-comite-fiduciario/components/tabla-validacion-solicitudes-contractuales/tabla-validacion-solicitudes-contractuales.component.html
@@ -42,7 +42,7 @@
                 <button mat-raised-button
                         color="accent"
                         class="btn-table"
-                        (click)="verSoporte(element.tipoSolicitudCodigo, element.solicitudId, element.numeroSolicitud)">
+                        (click)="verSoporte(element.tipoSolicitudCodigo, element.solicitudId, element.numeroSolicitud, element)">
                         Ver soporte
                 </button>
             </td>
