--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/tabla-validacion-solicitudes-contractuales/tabla-validacion-solicitudes-contractuales.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/tabla-validacion-solicitudes-contractuales/tabla-validacion-solicitudes-contractuales.component.html
@@ -30,7 +30,7 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Gestión </th>
             <td mat-cell *matCellDef="let element">
                 <button mat-raised-button color="accent" class="btn-table"
-                    (click)="verSoporte(element.tipoSolicitudCodigo, element.solicitudId, element.numeroSolicitud)">
+                    (click)="verSoporte(element.tipoSolicitudCodigo, element.solicitudId, element.numeroSolicitud, element)">
                     Ver soporte
                 </button>
             </td>
