--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-fuentes-de-financiacion/components/registrar/registrar.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-fuentes-de-financiacion/components/registrar/registrar.component.html
@@ -1188,7 +1188,7 @@
           class="btn-eliminar"
           (click)="borrarArray(fuenteRecursosArray, 0, 2, 0)"          
         >
-          <img src="assets/img/icon/menos.svg" alt="Eliminar vigencia" />
+          <img src="assets/img/icon/Basu-secondary.svg" alt="Eliminar vigencia" class="height-basu" />
           Eliminar Registro
         </button>
     </div>
