--- a/asivamosffie.web/asivamosffie/src/assets/scss/_button.scss
+++ b/asivamosffie.web/asivamosffie/src/assets/scss/_button.scss
@@ -91,6 +91,10 @@ button.mat-raised-button {
         height: 2em;
         margin-top: -.2em;
         margin-right: .3em;
+        
+        &.height-basu {
+            height: 1.8em;
+        }
     }
 }
 
