--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/detalle-traslado-gtlc/detalle-traslado-gtlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/detalle-traslado-gtlc/detalle-traslado-gtlc.component.html
@@ -167,9 +167,9 @@
                                 <p><strong>Número de factura: </strong><em>FAC00456</em></p>
                             </mat-card-content>
                         </mat-card>
-                        <p class="info-sub-title textoGrisVar">
-                            <span>Valor neto de giro: <em>$15.000.000</em></span>
-                            <span>Nuevo valor resgistrado: <em>$0</em></span>
+                        <p class="info-sub-title textoGris">
+                            <span><b>Valor neto de giro: </b><em>$15.000.000</em></span>
+                            <span><b>Nuevo valor resgistrado: </b><em>$0</em></span>
                         </p>
                         <mat-accordion>
                             <mat-expansion-panel class="expansion-style sub-expansion-black">
