--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/gestionar-tramite-liq-contractual/gestionar-tramite-liq-contractual.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/gestionar-tramite-liq-contractual/gestionar-tramite-liq-contractual.component.html
@@ -24,7 +24,7 @@
     <mat-accordion>
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title sin-diligenciar">
+                <mat-panel-title class="expansion-style--title en-proceso">
                     Liquidación de contrato de obra
                 </mat-panel-title>
             </mat-expansion-panel-header>
