--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/tabla-liquidacion-obra-gtlc/tabla-liquidacion-obra-gtlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/tabla-liquidacion-obra-gtlc/tabla-liquidacion-obra-gtlc.component.html
@@ -43,8 +43,12 @@
             <td mat-cell *matCellDef="let element">
                 <a [routerLink]="['verificarRequisitos', element.id]" mat-raised-button color="accent" class="btn-table"
                     *ngIf="element.estadoVerifiacion=='Sin verificación'">Verificar requisitos para liquidación </a>
-                <a [routerLink]="['verDetalleVerificacion', element.id]" mat-raised-button color="accent" class="btn-table"
-                    *ngIf="element.estadoVerifiacion!='Sin verificación'">Ver detalle</a>
+                <a [routerLink]="['verDetalleVerificacion', element.id]" mat-raised-button color="accent"
+                    class="btn-table" *ngIf="element.estadoVerifiacion!='Sin verificación'">Ver detalle</a>
+                <!--
+                     <a [routerLink]="['verDetalleEditarVerificacion', element.id]" mat-raised-button color="accent" class="btn-table"
+                    *ngIf="element.estadoVerifiacion!='Sin verificación'">Ver detalle/Editar</a>
+                -->
             </td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
