--- a/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-disponibilidad-presupuestal/components/ver-detalle-ddp-especial/ver-detalle-ddp-especial.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-disponibilidad-presupuestal/components/ver-detalle-ddp-especial/ver-detalle-ddp-especial.component.html
@@ -135,11 +135,11 @@
             <mat-card-content align="left">
                 <p>
                     <b>Tipo de aportante:</b>
-                    {{ disponibilidadPresupuestal[ 'tipoAportante' ] }}
+                    {{ disponibilidadPresupuestal[ 'stringTipoAportante' ] }}
                 </p>
                 <p>
                     <b>Nombre del aportante:</b>
-                    {{ disponibilidadPresupuestal[ 'nombreAportante' ] }}
+                    {{disponibilidadPresupuestal.stringAportante}}
                 </p>
                 <p>
                     <b>Valor:</b>
