--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-disponibilidad-presupuestal/components/detalle-con-validacion-presupuestal/detalle-con-validacion-presupuestal.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-disponibilidad-presupuestal/components/detalle-con-validacion-presupuestal/detalle-con-validacion-presupuestal.component.html
@@ -342,7 +342,7 @@
     </mat-accordion>
 
     <div class="botones">
-        <button mat-raised-button color="accent" (click)="generarddp()">Generar DDP</button>
+        <button mat-raised-button color="accent" (click)="generarddp()">Descargar DDP</button>
     </div>
 
 </section>
