--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/form-demandantes-convocantes-dj/form-demandantes-convocantes-dj.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/form-demandantes-convocantes-dj/form-demandantes-convocantes-dj.component.html
@@ -143,7 +143,7 @@
         </mat-expansion-panel>
     </mat-accordion>
 </form>
-<mat-accordion  *ngIf="this.addressForm.value.demandaContraFFIE==true">
+<mat-accordion  *ngIf="this.addressForm.value.demandaContraFFIE==true" class="animatedDown">
     <mat-expansion-panel class="expansion-style">
         <mat-expansion-panel-header class="expansion-style--header">
             <mat-panel-title class="expansion-style--title ">
@@ -154,7 +154,7 @@
         ></app-form-demandados-dj>
     </mat-expansion-panel>
 </mat-accordion>
-<mat-accordion  *ngIf="this.addressForm.value.demandaContraFFIE==false">
+<mat-accordion  *ngIf="this.addressForm.value.demandaContraFFIE==false" class="animatedDown">
     <mat-expansion-panel class="expansion-style">
         <mat-expansion-panel-header class="expansion-style--header">
             <mat-panel-title class="expansion-style--title">
