--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/ver-detalle-muestras/ver-detalle-muestras.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/ver-detalle-muestras/ver-detalle-muestras.component.html
@@ -29,7 +29,7 @@
                 <div class="mt-1em" align="left">
                     <mat-card class="border">
                         <mat-card-content class="mt-1em">
-                            <p><b>Fecha de entrega de resultados</b>: {{ muestra.fechaEntregaResultado | date: 'dd/MM/yyyy' }} </p>
+                            <p><b>Fecha de entrega de la muestra</b>: {{ muestra.fechaEntregaResultado | date: 'dd/MM/yyyy' }} </p>
                             <p><b>Nombre de la muestra</b>: {{ muestra.nombreMuestra }} </p>
                             <section>
                                 <p><b>Observaciones frente a los resultados:</b></p> <div [innerHTML]="muestra.observacion"></div>
