--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-avance-semanal/components/tabla-avance-fisico/tabla-avance-fisico.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-avance-semanal/components/tabla-avance-fisico/tabla-avance-fisico.component.html
@@ -2,10 +2,10 @@
   	<div align="left">
   	    <mat-card class="border">
   	        <mat-card-content class="mt-1em">
-  	            <section class="d-flex">
-  	                <p class="ml-1em"><b>Programación acumulada de la obra</b>: {{ valuePendingProgramacionObra() }}%</p>
-  	                <p class="ml-final-date"><b>Avance acumulado ejecutado de la obra</b>: {{ valuePendingAvanceEjecutado() }}%</p>
-  	            </section>
+                <section class="d-flex">
+                    <p class="ml-1em"><b>Programación acumulada de la obra</b>: {{ seguimientoSemanal.infoProyecto.programacionSemanal !== undefined ? seguimientoSemanal.infoProyecto.programacionSemanal + '%' : '' }}</p>
+                    <p class="ml-final-date"><b>Avance acumulado ejecutado de la obra</b>: {{ seguimientoSemanal.infoProyecto.avanceFisicoSemanal !== undefined ? seguimientoSemanal.infoProyecto.avanceFisicoSemanal + '%' : '' }}</p>
+                </section>
   	        </mat-card-content>
   	    </mat-card>
   	</div>
@@ -19,31 +19,30 @@
 
 <section class="text-center table-responsive size-table" style="margin-top: 2em;">
     <table mat-table [dataSource]="tablaAvanceFisico" matSort>
-  
         <ng-container matColumnDef="semanaNumero">
-          	<th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Semana número </th>
-          	<td mat-cell *matCellDef="let element" align="center" class="color-text"> <b>{{ element.semanaNumero }}</b> </td>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Semana número </th>
+          <td mat-cell *matCellDef="let element" align="center" class="color-text"> <b>{{ element.semanaNumero }}</b> </td>
         </ng-container>
-  
+    
         <ng-container matColumnDef="periodoReporte">
-          	<th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color w-20"> Período del reporte </th>
-          	<td mat-cell *matCellDef="let element" align="center" class="color-text"> {{ element.periodoReporte }} </td>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color w-20"> Período del reporte </th>
+          <td mat-cell *matCellDef="let element" align="center" class="color-text"> {{ element.periodoReporte }} </td>
         </ng-container>
-  
+    
         <ng-container matColumnDef="programacionSemana">
-          	<th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Programación de la semana </th>
-          	<td mat-cell *matCellDef="let element" align="center" class="color-text"> {{ element.programacionSemana }} </td>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Programación de la semana </th>
+          <td mat-cell *matCellDef="let element" align="center" class="color-text"> {{ element.programacionSemana }}% </td>
         </ng-container>
-  
+    
         <ng-container matColumnDef="capitulo">
-          	<th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color w-20"> Capítulo </th>
-          	<td mat-cell *matCellDef="let element" align="center" class="color-text" class="padding-0em border-color-detalle">
-          	  	<div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text" *ngFor="let capitulo of element.avancePorCapitulo">
-          	  	  	{{ capitulo.capitulo }}
-          	  	</div>
-          	</td>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color w-20"> Capítulo </th>
+          <td mat-cell *matCellDef="let element" align="center" class="color-text" class="padding-0em border-color-detalle">
+            <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text" *ngFor="let capitulo of element.avancePorCapitulo">
+              {{ capitulo.capitulo }}
+            </div>
+          </td>
         </ng-container>
-  
+    
         <ng-container matColumnDef="programacionCapitulo">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Programación por capítulo </th>
             <td mat-cell *matCellDef="let element" align="center" class="color-text" class="padding-0em border-color-detalle">
@@ -52,7 +51,7 @@
               </div>
             </td>
         </ng-container>
-  
+    
         <ng-container matColumnDef="avanceFisicoCapitulo">
             <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 14%;" class="back-color"> Avance físico por capítulo </th>
             <td mat-cell *matCellDef="let element" align="center" class="color-text" class="padding-0em border-color-detalle">
@@ -61,14 +60,14 @@
               </div>
             </td>
         </ng-container>
-
+    
         <ng-container matColumnDef="avanceFisicoSemana">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Avance físico de la semana </th>
-            <td mat-cell *matCellDef="let element" align="center" class="color-text"> {{ element.avanceFisicoSemana > 0 ? element.avanceFisicoSemana+'%' : '' }} </td>
+            <td mat-cell *matCellDef="let element" align="center" class="color-text"> {{ element.avanceFisicoSemana + '%' }} </td>
         </ng-container>
     
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
 </section>
 <section *ngIf="seguimientoSemanalAvanceFisico !== undefined">
