--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-avance-semanal/components/tabla-disponibilidad-material/tabla-disponibilidad-material.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-avance-semanal/components/tabla-disponibilidad-material/tabla-disponibilidad-material.component.html
@@ -1,4 +1,4 @@
-<table class="mat-table cdk-table mat-sort mat-table-style table-form table-form--2" *ngIf="seguimientoDiario !== undefined && dataSeguimientoDiario.length > 0">
+<table class="mat-table cdk-table mat-sort mat-table-style table-form table-form--2 mt-1em" *ngIf="seguimientoDiario !== undefined && dataSeguimientoDiario.length > 0">
     <thead>
         <tr class="mat-header-row cdk-header-row ng-star-inserted">
             <th class="mat-header-cell cdk-header-cell ng-star-inserted" rowspan="2">
@@ -11,7 +11,7 @@
                 Número de horas de retraso
             </th>
             <th class="mat-header-cell cdk-header-cell ng-star-inserted" rowspan="2" style="width: 15%;">
-                Observaciones
+                Observación
             </th>
             <th class="mat-header-cell cdk-header-cell ng-star-inserted" rowspan="2" style="width: 12%;">
                 Total de horas de retraso
@@ -19,7 +19,7 @@
         </tr>
         <tr class="mat-header-row cdk-header-row ng-star-inserted">
             <th class="mat-header-cell cdk-header-cell ng-star-inserted">
-                Material
+                materiales
             </th>
             <th class="mat-header-cell cdk-header-cell ng-star-inserted" style="width: 15%;">
                 Equipo
@@ -33,22 +33,22 @@
       <tr>
         <td class="mat-cell cdk-cell ng-star-inserted" style="padding: 0em !important;">
             <div class="sub-item-table flex-table justify-content-center align-items-center h-3em" *ngFor="let resumen of dataSeguimientoDiario[0].resumenAlertas">
-                {{ resumen.fechaSeguimiento | date: 'dd/MM/yyyy' }}
+                {{ resumen.fechaSeguimiento !== null ? ( resumen.fechaSeguimiento | date: 'dd/MM/yyyy' ) : '---' }}
             </div>
         </td>
         <td class="mat-cell cdk-cell ng-star-inserted" style="padding: 0em !important;">
             <div class="sub-item-table flex-table justify-content-center align-items-center h-3em" *ngFor="let resumen of dataSeguimientoDiario[0].resumenAlertas">
-                {{ resumen.causaIndisponibilidadMaterialCodigo }}
+                {{ resumen.causaBajaDisponibilidadMaterialNombre }}
             </div>
         </td>
         <td class="mat-cell cdk-cell ng-star-inserted" style="padding: 0em !important;">
             <div class="sub-item-table flex-table justify-content-center align-items-center h-3em" *ngFor="let resumen of dataSeguimientoDiario[0].resumenAlertas">
-                {{ resumen.causaIndisponibilidadEquipoCodigo }}
+                {{ resumen.causaBajaDisponibilidadEquipoNombre }}
             </div>
         </td>
         <td class="mat-cell cdk-cell ng-star-inserted" style="padding: 0em !important;">
             <div class="sub-item-table flex-table justify-content-center align-items-center h-3em" *ngFor="let resumen of dataSeguimientoDiario[0].resumenAlertas">
-                {{ resumen.causaIndisponibilidadProductividadCodigo }}
+                {{ resumen.causaBajaDisponibilidadProductividadNombre }}
             </div>
         </td>
         <td class="mat-cell cdk-cell ng-star-inserted" style="padding: 0em !important;">
@@ -62,8 +62,8 @@
                         color="accent" 
                         class="btn-table expansion-style--title btn-color h-2em"
                         style="width: 90%;"
-                        [disabled]="resumen.seguimientoDiarioObservaciones.length === 0"
-                        (click)="openDialogObservaciones( resumen.seguimientoDiarioObservaciones[0].observaciones, resumen )">
+                        [disabled]="resumen.disponibilidadMaterialObservaciones === undefined && resumen.disponibilidadEquipoObservaciones === undefined && resumen.productividadObservaciones === undefined"
+                        (click)="openDialogObservaciones( resumen )">
                         <small>Observaciones</small>
                 </button>
             </div>
