--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-avance-semanal/components/ver-detalle-avance-semanal/ver-detalle-avance-semanal.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-avance-semanal/components/ver-detalle-avance-semanal/ver-detalle-avance-semanal.component.html
@@ -7,12 +7,12 @@
 
     <div class="text-center">
         <h1 class="title-menu--h1">
-            Ver detalle validación avance semanal {{ seguimientoSemanal.contratacionProyecto.proyecto.llaveMen }}
+            Ver detalle validación avance semanal {{ seguimientoSemanal.infoProyecto.llaveMen }}
         </h1>
     </div>
 
     <div class="d-flex justify-content-center colorMainColor mt-1em">
-        <p>Número de contrato de obra: <b> {{ seguimientoSemanal.contratacionProyecto.contratacion.contrato[0].numeroContrato }} </b> </p>
+        <p>Número de contrato de obra: <b> {{ seguimientoSemanal.infoProyecto.numeroContrato }} </b> </p>
         <p style="margin-left: 2em;">Fecha del reporte: <b>{{ seguimientoSemanal.fechaModificacion | date: 'dd/MM/yyyy' }}</b> </p>
         <p style="margin-left: 2em;">Semana número: <b> {{ seguimientoSemanal.numeroSemana }} </b> </p>
     </div>
@@ -20,11 +20,12 @@
     <div class="mt-2em" align="left">
         <mat-card class="border">
             <mat-card-content class="mt-1em">
-                <p><b>Tipo de intervención</b>: {{ seguimientoSemanal.contratacionProyecto.proyecto.tipoIntervencionString }} </p>
-                <p><b>Departamento</b>: {{ seguimientoSemanal.contratacionProyecto.proyecto.departamentoObj.descripcion }} </p>
-                <p><b>Municipio</b>: {{ seguimientoSemanal.contratacionProyecto.proyecto.municipioObj.descripcion }} </p>
-                <p><b>Institución Educativa</b>: {{ seguimientoSemanal.contratacionProyecto.proyecto.institucionEducativa.nombre }} </p>
-                <p><b>Sede</b>: {{ seguimientoSemanal.contratacionProyecto.proyecto.sede.nombre }} </p>
+                <p><b>Tipo de intervención</b>: {{ seguimientoSemanal.infoProyecto.tipoIntervencion }} </p>
+                <p><b>Departamento</b>: {{ seguimientoSemanal.infoProyecto.departamento }} </p>
+                <p><b>Municipio</b>: {{ seguimientoSemanal.infoProyecto.municipio }} </p>
+                <p><b>Institución Educativa</b>: {{ seguimientoSemanal.infoProyecto.institucionEducativa }} </p>
+                <p><b>Sede</b>: {{ seguimientoSemanal.infoProyecto.sede }} </p>
+                <p *ngIf="seguimientoSemanal.infoProyecto.fechaUltimoReporte !== undefined"><b>Fecha del último reporte</b>: {{ seguimientoSemanal.infoProyecto.fechaUltimoReporte.fechaModificacion | date: 'dd/MM/yyyy' }} </p>
             </mat-card-content>
         </mat-card>
     </div>
