--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-avance-semanal/components/verificar-avance-fisico/verificar-avance-fisico.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-avance-semanal/components/verificar-avance-fisico/verificar-avance-fisico.component.html
@@ -1,4 +1,8 @@
 <section class="text-center" *ngIf="seguimientoSemanal !== undefined">
+    <div class="colorMainColor">
+        <p>Estado de la obra: <b> {{ seguimientoSemanal.infoProyecto.estadoObra }} </b> </p>
+    </div>
+
     <mat-accordion>
         <mat-expansion-panel class="expansion-style sub-expansion">
             <mat-expansion-panel-header class="expansion-style--header">
@@ -15,10 +19,6 @@
                         </mat-panel-title>
                     </mat-expansion-panel-header>
 
-                    <div class="colorMainColor">
-                        <p> <b>Disponiblidad personal: Insuficiente</b> </p>
-                    </div>
-
                     <app-tabla-avance-resumen-alertas [seguimientoDiario]="seguimientoSemanal.seguimientoDiario"></app-tabla-avance-resumen-alertas>
                 </mat-expansion-panel>
 
@@ -28,12 +28,6 @@
                             Disponibilidad de material, equipo o productividad
                         </mat-panel-title>
                     </mat-expansion-panel-header>
-
-                    <div class="d-flex justify-content-center colorMainColor">
-                        <p><b>Disponiblidad de material</b>: Por integrar</p>
-                        <p style="margin-left: 2em;"> <b>Disponiblidad del equipo</b>: Por integrar </p>
-                        <p style="margin-left: 2em;"><b>Productividad</b>: Por integrar </p>
-                    </div>
 
                     <app-tabla-disponibilidad-material [seguimientoDiario]="seguimientoSemanal.seguimientoDiario"></app-tabla-disponibilidad-material>
                 </mat-expansion-panel>
@@ -47,7 +41,7 @@
                 </mat-panel-title>
             </mat-expansion-panel-header>
 
-            <app-tabla-avance-fisico [seguimientoDiario]="seguimientoSemanal" [esVerDetalle]="esVerDetalle" [avanceFisicoObs]="avanceFisicoObs"></app-tabla-avance-fisico>
+            <app-tabla-avance-fisico [seguimientoSemanal]="seguimientoSemanal" [esVerDetalle]="esVerDetalle" [avanceFisicoObs]="avanceFisicoObs"></app-tabla-avance-fisico>
         </mat-expansion-panel>
     </mat-accordion>
 </section>
