--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-avance-semanal/components/tabla-verificar-avance-semanal/tabla-verificar-avance-semanal.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-avance-semanal/components/tabla-verificar-avance-semanal/tabla-verificar-avance-semanal.component.html
@@ -58,7 +58,7 @@
                     color="accent" 
                     class="btn-table"
                     *ngIf="element.verAvanceApoyo !== undefined"
-                    [routerLink]="[ 'verificarSeguimientoSemanal', element.seguimientoSemanalId ]">
+                    [routerLink]="[ 'verificarSeguimientoSemanal', element.verAvanceApoyo ]">
                     {{ element.fechaModificacionVerificar === undefined ? 'Verificar avance' : 'Ver detalle/Editar' }}
             </button>
             <button mat-raised-button
@@ -72,7 +72,7 @@
                     color="accent" 
                     class="btn-table"
                     *ngIf="element.registroCompletoVerificar === true"
-                    (click)="enviarVerificacion( element.seguimientoSemanalId )">
+                    (click)="enviarVerificacion( element.verAvanceApoyo )">
                     Enviar al supervisor
             </button>
         </td>
