Ajustes 5.1.1 - 5.1.3 primera parte - Estados

--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/tabla-informe-final-proyecto/tabla-informe-final-proyecto.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/tabla-informe-final-proyecto/tabla-informe-final-proyecto.component.html
@@ -120,7 +120,7 @@
         </a> -->
         <a
           *ngIf="
-            element.estadoInformeCod === '3'
+            element.estadoInformeCod === '3' || element.estadoInformeCod === '7'
           "
           mat-button
           mat-raised-button
