--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-informe-del-proyecto/components/tabla-detalle-informe-anexos/tabla-detalle-informe-anexos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-informe-del-proyecto/components/tabla-detalle-informe-anexos/tabla-detalle-informe-anexos.component.html
@@ -112,8 +112,8 @@
                     color="accent"
                     class="btn-table animatedOpacity min-w-11em"
                     type="button"
-                    (click)="openDialogObservaciones(element)"
-                  >
+                    (click)="openDialogObservaciones(element, true)"
+                    >
                     Ver Observaciones
                   </button>
                 </td>
