--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-informe-del-proyecto/components/validar-informe/validar-informe.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-informe-del-proyecto/components/validar-informe/validar-informe.component.html
@@ -16,8 +16,8 @@
       </b>
     </p>
   </div>
-
-  <app-datos-del-proyecto *ngIf="report" [report]="report" [existeObservacion]="existeObservacion"></app-datos-del-proyecto>
+  
+  <app-datos-del-proyecto *ngIf="report" [report]="report" [existeObservacionApoyo]="existeObservacionApoyo"></app-datos-del-proyecto>
   <app-form-observaciones-recibo-satisfaccion *ngIf="report" [report]="report"></app-form-observaciones-recibo-satisfaccion>
   <app-tabla-informe-final-anexos *ngIf="report" [id]="report.proyecto.informeFinal[0].informeFinalId" [llaveMen]="report.proyecto.llaveMen"></app-tabla-informe-final-anexos>
 
