--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/dialog-tipo-documento/dialog-tipo-documento.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/dialog-tipo-documento/dialog-tipo-documento.component.html
@@ -13,7 +13,7 @@
   </p>
   <p>
     <b> {{ data.informe.posicion }}. </b>
-    {{ data.informe.nombre }}
+    {{ data.informe.nombre }} {{ data.verDetalle }}
   </p>
 </div>
 
@@ -274,4 +274,4 @@
   </mat-card-content>
 </mat-card>
 
-<app-tabla-observaciones *ngIf="data.informe.tieneObservacionSupervisor && anexos != null" [data]="anexos"></app-tabla-observaciones>
+<app-tabla-observaciones *ngIf="existe_historial" [data]="anexos"></app-tabla-observaciones>
