--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.html
@@ -43,14 +43,16 @@
               </span>
             </td>
           </ng-container>
-      
-          <!-- calificacionCodigo Column -->
+
+          <!-- calificacionCodigo Column-->
           <ng-container matColumnDef="calificacionCodigo">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Estado del requisito</th>
             <td mat-cell *matCellDef="let element">
-              <section class="slect-table-contain mt-1em">
+              <section class="slect-table-contain mt-1em" *ngIf="(element.estadoInformeFinal !== '4') || (element.aprobacionCodigo === '2' && element.estadoInformeFinal === '4' && element.tieneObservacionSupervisor)">
                 <mat-form-field class="select-width">
-                  <mat-label>{{ element.calificacionCodigoString }}</mat-label>
+                  <mat-label>
+                    <span *ngIf="element.estadoInformeFinal !== '4'">{{ element.calificacionCodigoString }}</span>
+                  </mat-label>
                   <mat-select [(ngModel)]="element.calificacionCodigo" (selectionChange)="changeState()" required>
                     <mat-option *ngFor="let estado of estadoArray" [value]="estado.value">
                       {{ estado.name }}
@@ -69,22 +71,23 @@
                   />
                 </span>
               </section>
+              <span *ngIf="element.estadoInforme === '4' && !(element.aprobacionCodigo === '2' && element.tieneObservacionSupervisor)">{{ element.calificacionCodigoString }}</span>
             </td>
           </ng-container>
       
-            <!-- Id Column -->
+          <!-- Id Column -->
           <ng-container matColumnDef="informeFinalInterventoriaId">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Gestión</th>
             <td mat-cell *matCellDef="let element">
               <button
-                *ngIf="(element.estadoInformeFinal !== '4' && (element.calificacionCodigo === '1' || element.calificacionCodigo === 1) ) || (element.calificacionCodigo === '1' && element.estadoInformeFinal === '4' && !element.tieneObservacionSupervisor)"
+                *ngIf="(element.estadoInformeFinal !== '4' && (element.calificacionCodigo === '1' || element.calificacionCodigo === 1) )"
                 mat-button
                 color="warn"
                 mat-raised-button
                 color="accent"
                 class="btn-table animatedOpacity"
                 type="button"
-                (click)="openDialogTipoDocumento(element)"
+                (click)="openDialogTipoDocumento(element,false)"
               >
                 <span *ngIf="(element.informeFinalAnexoId == null || element.informeFinalAnexoId == 0) && (element.tieneAnexo == null || !element.tieneAnexo)">
                   Tipo de documento
@@ -92,11 +95,10 @@
                 <span *ngIf="(element.estadoInformeFinal !== '4' && element.informeFinalAnexoId != null && element.informeFinalAnexoId > 0)  || element.tieneAnexo">
                   Ver detalle/ Editar
                 </span>
-                <span *ngIf="element.estadoInformeFinal === '4' && !element.tieneObservacionSupervisor"> Ver detalle </span>
               </button>
               <!--Ver detalle/editar solo cuando es devuleto por supervisor-->
               <button
-                *ngIf="element.estadoInformeFinal ==='4' && element.tieneObservacionSupervisor && (element.calificacionCodigo === '1' || element.calificacionCodigo === 1)"
+                *ngIf="element.estadoInformeFinal ==='4' && element.tieneObservacionSupervisor && (element.aprobacionCodigo === '2' || element.aprobacionCodigo === 2)"
                 mat-button
                 color="warn"
                 mat-raised-button
@@ -105,10 +107,22 @@
                 [class.completo]="element.estadoInformeFinal ==='4' && element.tieneObservacionSupervisor && editadoSupervision"
                 [class.sin-diligenciar]="element.estadoInformeFinal ==='4' && element.tieneObservacionSupervisor && !editadoSupervision"
                 type="button"
-                (click)="openDialogTipoDocumento(element)"
+                (click)="openDialogTipoDocumento(element,false)"
               >
                   Ver detalle/ Editar
               </button>
+              <button
+              *ngIf="(element.calificacionCodigo === '1' && element.estadoInformeFinal === '4' && !element.tieneObservacionSupervisor)"
+              mat-button
+              color="warn"
+              mat-raised-button
+              color="accent"
+              class="btn-table animatedOpacity"
+              type="button"
+              (click)="openDialogTipoDocumento(element,true)"
+            >
+              <span> Ver detalle</span>
+            </button>
               <button
                 *ngIf="element.calificacionCodigo === '2' || element.calificacionCodigo === 2"
                 mat-button
