--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-informe-del-proyecto/components/dialog-observaciones/dialog-observaciones.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-informe-del-proyecto/components/dialog-observaciones/dialog-observaciones.component.html
@@ -5,33 +5,37 @@
 <div class="text-center">
   <h1 class="title-menu--h1">
     Observaciones
-    LJ77654
+    {{ data.llaveMen }}
   </h1>
   <p class="colorMainColor mt-05em">
     <span class="mx-1em">
       Estado del requisito:
       <b> No cumple </b>
     </span>
-    <span class="mx-1em">
+    <span class="mx-1em" *ngIf="data.informe.informeFinalAnexo">
       Tipo de anexo:
-      <b> Fisico </b>
+      <b> {{ data.informe.informeFinalAnexo.tipoAnexoString }} </b>
     </span>
-    <span class="mx-1em">
-      SAC:
-      <b> 9088765 </b>
+    <span class="mx-1em" *ngIf="data.informe.informeFinalAnexo && data.informe.informeFinalAnexo.urlSoporte">
+      URL:
+      <b> {{ data.informe.informeFinalAnexo.urlSoporte }} </b>
     </span>
-    <span class="mx-1em">
+    <span class="mx-1em" *ngIf="data.informe.informeFinalAnexo && data.informe.informeFinalAnexo.numRadicadoSac">
+      Número de radicado en SAC:
+      <b> {{ data.informe.informeFinalAnexo.numRadicadoSac }} </b>
+    </span>
+    <span class="mx-1em" *ngIf="data.informe.informeFinalAnexo && data.informe.informeFinalAnexo.fechaRadicado">
       Fecha de radicado:
-      <b> 10/11/2020 </b>
+      <b> {{ data.informe.informeFinalAnexo.fechaRadicado | date: 'dd/MM/yyyy' }} </b>
     </span>
   </p>
   <p>
-    <b> 3. </b>
-    Informe final de Obra del contratista de obra
+    <b> {{ data.informe.informeFinalListaChequeo.posicion }}. </b>
+    {{ data.informe.informeFinalListaChequeo.nombre }}
   </p>
 </div>
 
-<form [formGroup]="observaciones" novalidate (ngSubmit)="onSubmit()">
+<form [formGroup]="observaciones" novalidate (ngSubmit)="onSubmit()" *ngIf="!data.verDetalle">
   <div class="d-flex align-items-center">
     <div class="text-area-quill">
       <label for="alcanceParticular" class="text-area-quill--label">Observaciones</label>
@@ -67,3 +71,10 @@
     </button>
   </div>
 </form>
+
+<mat-card class="shipping-card var-main-gris" *ngIf="data.verDetalle">
+  <mat-card-content>
+    <p [innerHTML]="observaciones.get('observaciones').value">
+    </p>
+  </mat-card-content>
+</mat-card>
