--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-informe-del-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-informe-del-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.html
@@ -139,7 +139,7 @@
                 </th>
                 <td mat-cell *matCellDef="let element">
                   <button
-                    *ngIf="element.aprobacionCodigo === 2 || element.aprobacionCodigo ==='2'"
+                    *ngIf="(element.aprobacionCodigo === 2 || element.aprobacionCodigo ==='2')"
                     mat-button
                     color="warn"
                     mat-raised-button
@@ -153,7 +153,7 @@
                   Observaciones
                   </button>
                   <button
-                    *ngIf="(element.validacionCodigo === '2' || element.validacionCodigo === 2) && !(element.aprobacionCodigo === 2 || element.aprobacionCodigo ==='2')"
+                    *ngIf="(element.validacionCodigo === '2' || element.validacionCodigo === 2) && (element.aprobacionCodigo == null)"
                     mat-button
                     color="warn"
                     mat-raised-button
@@ -162,7 +162,7 @@
                     type="button"
                     (click)="openDialogObservaciones(element)"
                   >
-                  Ver/Editar Observaciones
+                  Ver/Editar Observaciones {{ element.aprobacionCodigo }}
                   </button>
                 </td>
               </ng-container>
