--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-informe-final-proyecto/components/dialog-observaciones/dialog-observaciones.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-informe-final-proyecto/components/dialog-observaciones/dialog-observaciones.component.html
@@ -30,7 +30,7 @@
     </span>
   </p>
   <p>
-    <b> {{ data.informe.informeFinalListaChequeoId }}. </b>
+    <b> {{ data.informe.informeFinalListaChequeo.posicion }}. </b>
     {{ data.informe.informeFinalListaChequeo.nombre }}
   </p>
 </div>
@@ -72,9 +72,22 @@
   </div>
 </form>
 
-<mat-card class="shipping-card var-main-gris" *ngIf="data.verDetalle">
+<mat-card class="shipping-card var-main-gris" *ngIf="data.verDetalle && !(data.informe.estadoValidacion === '4' || data.informe.estadoValidacion === '6')">
     <mat-card-content>
       <p [innerHTML]="observaciones.get('observaciones').value">
       </p>
     </mat-card-content>
+</mat-card>
+
+<mat-card class="shipping-card var-main-gris" *ngIf="data.verDetalle && (data.informe.estadoValidacion === '4' || data.informe.estadoValidacion === '6')" [formGroup]="observaciones">
+  <mat-card-header class="header-card header-card--margin">
+    <mat-card-title class="mat-card-title header-card--text">
+      Observación del supervisor
+    </mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <strong> {{ observaciones.get('fechaCreacion').value | date: 'dd/MM/yyyy' }}</strong>
+    <p [innerHTML]="observaciones.get('observaciones').value">
+    </p>
+  </mat-card-content>
 </mat-card>
