--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-informe-final-proyecto/components/tabla-informe-final/tabla-informe-final.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-informe-final-proyecto/components/tabla-informe-final/tabla-informe-final.component.html
@@ -113,7 +113,7 @@
           Ver detalle/Editar
         </a>
         <a
-        *ngIf="element.estadoValidacion === '3'"
+        *ngIf="element.estadoValidacion === '3' || element.estadoValidacion === '4'"
           mat-button
           mat-raised-button
           color="accent"
