--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-informe-final-proyecto/components/verificar-informe/verificar-informe.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-informe-final-proyecto/components/verificar-informe/verificar-informe.component.html
@@ -12,7 +12,7 @@
     <p class="colorMainColor mt-05em"> 
       Fecha de envío del informe final
       <b *ngIf="report">
-        {{ report.proyecto.informeFinal[0].fechaCreacion  | date:'dd/MM/yyyy' }}
+        {{ report.proyecto.informeFinal[0].fechaEnvioApoyoSupervisor  | date:'dd/MM/yyyy' }}
       </b>
     </p>
   </div>
