--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/form-recibo-a-satisfaccion/form-recibo-a-satisfaccion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/form-recibo-a-satisfaccion/form-recibo-a-satisfaccion.component.html
@@ -104,7 +104,22 @@
       </div>
     </mat-card-content>
   </mat-card>
-  <app-tabla-observaciones-recibo-satisfaccion *ngIf="tieneObservacionesSupervisor" [data]="report"></app-tabla-observaciones-recibo-satisfaccion>
+
+  <mat-card class="shipping-card var-main-gris" *ngIf="tieneObservacionesSupervisor" [formGroup]="observacionesForm">
+    <mat-card-header class="header-card header-card--margin">
+      <mat-card-title class="mat-card-title header-card--text">
+        Observación del supervisor
+      </mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <strong> {{ observacionesForm.get('fechaCreacion').value | date: 'dd/MM/yyyy' }}</strong>
+      <p [innerHTML]="observacionesForm.get('observaciones').value">
+      </p>
+    </mat-card-content>
+  </mat-card>
+
+  <app-tabla-observaciones-recibo-satisfaccion *ngIf="existeHistorial" [data]="report.proyecto.informeFinal[0]"></app-tabla-observaciones-recibo-satisfaccion>
+  
   <div class="text-center mb-2em">
     <button mat-button color="warn" class="btn-guardar" type="submit">
       <img src="assets/img/icon/guardar.svg" alt="Guardar" />
