--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.html
@@ -51,7 +51,7 @@
               <section class="slect-table-contain mt-1em" *ngIf="(element.estadoInformeFinal !== '4') || (element.aprobacionCodigo === '2' && element.estadoInformeFinal === '4' && element.tieneObservacionSupervisor)">
                 <mat-form-field class="select-width">
                   <mat-label>
-                    <span *ngIf="element.estadoInformeFinal !== '4'">{{ element.calificacionCodigoString }}</span>
+                    <span *ngIf="element.estadoInformeFinal !== '4' || (element.estadoInformeFinal === '4' && element.tieneModificacionInterventor)">{{ element.calificacionCodigoString }}</span>
                   </mat-label>
                   <mat-select [(ngModel)]="element.calificacionCodigo" (selectionChange)="changeState()" required>
                     <mat-option *ngFor="let estado of estadoArray" [value]="estado.value">
@@ -80,7 +80,7 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Gestión</th>
             <td mat-cell *matCellDef="let element">
               <button
-                *ngIf="(element.estadoInformeFinal !== '4' && (element.calificacionCodigo === '1' || element.calificacionCodigo === 1) )"
+                *ngIf="(element.estadoInformeFinal !== '4' && element.estadoInformeFinal !== '8' && (element.calificacionCodigo === '1' || element.calificacionCodigo === 1) )"
                 mat-button
                 color="warn"
                 mat-raised-button
@@ -92,27 +92,27 @@
                 <span *ngIf="(element.informeFinalAnexoId == null || element.informeFinalAnexoId == 0) && (element.tieneAnexo == null || !element.tieneAnexo)">
                   Tipo de documento
                 </span>
-                <span *ngIf="(element.estadoInformeFinal !== '4' && element.informeFinalAnexoId != null && element.informeFinalAnexoId > 0)  || element.tieneAnexo">
+                <span *ngIf="(element.estadoInformeFinal !== '4' && element.estadoInformeFinal !== '8' && element.informeFinalAnexoId != null && element.informeFinalAnexoId > 0)  || element.tieneAnexo">
                   Ver detalle/ Editar
                 </span>
               </button>
               <!--Ver detalle/editar solo cuando es devuleto por supervisor-->
               <button
-                *ngIf="element.estadoInformeFinal ==='4' && element.tieneObservacionSupervisor && (element.aprobacionCodigo === '2' || element.aprobacionCodigo === 2)"
+                *ngIf="(element.estadoInformeFinal ==='4' || element.estadoInformeFinal ==='8') && element.tieneObservacionSupervisor && (element.aprobacionCodigo === '2' || element.aprobacionCodigo === 2)"
                 mat-button
                 color="warn"
                 mat-raised-button
                 color="accent"
                 class="btn-table animatedOpacity info-button"
-                [class.completo]="element.estadoInformeFinal ==='4' && element.tieneObservacionSupervisor && element.tieneModificacionInterventor"
-                [class.sin-diligenciar]="element.estadoInformeFinal ==='4' && element.tieneObservacionSupervisor && !element.tieneModificacionInterventor"
+                [class.completo]="(element.estadoInformeFinal ==='4' || element.estadoInformeFinal ==='8')  && element.tieneObservacionSupervisor && element.tieneModificacionInterventor"
+                [class.sin-diligenciar]="(element.estadoInformeFinal ==='4' || element.estadoInformeFinal ==='8') && element.tieneObservacionSupervisor && !element.tieneModificacionInterventor"
                 type="button"
                 (click)="openDialogTipoDocumento(element,false)"
               >
                   Ver detalle/ Editar
               </button>
               <button
-              *ngIf="(element.calificacionCodigo === '1' && element.estadoInformeFinal === '4' && !element.tieneObservacionSupervisor)"
+              *ngIf="(element.calificacionCodigo === '1' && (element.estadoInformeFinal === '4' || element.estadoInformeFinal === '8') && !element.tieneObservacionSupervisor)"
               mat-button
               color="warn"
               mat-raised-button
